# nex

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  electron.vite.config.ts  eslint.config.mjs  package.json  skills-lock.json  tsconfig.node.json  tsconfig.web.json
.claude/skills/tailwindcss/: SKILL.md
.claude/skills/vercel-composition-patterns/: AGENTS.md
.claude/skills/vercel-react-best-practices/: AGENTS.md
.githooks/: pre-commit
cli/: Cargo.toml
cli/src/: context.rs  db.rs  git.rs  main.rs  symlinks.rs
cli/src/agents/: claude.rs  mod.rs
helpers/speech/: .gitignore  package.json
helpers/speech/scripts/: build.sh  postinstall.js
helpers/speech/swift/: Package.swift
scripts/: resign.js
src/native/: paths.ts  which.ts
src/native/agents/: agent-display.ts  agent-terminal.ts  catalog.ts  clone-account.ts  detect.ts  resume.ts
src/native/cli/: exec.ts
src/native/db/: database.ts  migrations.ts  seed.ts  types.ts
src/native/git/: git.ts  start-work.ts  symlinks.ts
src/native/ipc/: channels.ts  handlers.ts
src/native/main/: app-window.ts  fix-env.ts  index.ts  menu.ts  store.ts  updater.ts
src/native/preload/: index.d.ts  index.ts
src/native/protocol/: nex-file.ts
src/native/pty/: manager.ts
src/native/speech/: client.ts  helper-process.ts  manager.ts
src/web/: App.tsx  index.html  main.tsx
src/web/components/: error-boundary.tsx  titlebar.tsx
src/web/hooks/: use-app-data.ts  use-fullscreen.ts  use-ipc.ts  use-merged-ref.ts  use-near-viewport.ts  use-onboarding.ts  use-resizable-width.ts  (+2 more)
(+130 files in other folders)
