[package]
name = "nex-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
colored = "3"
dirs = "6"
which = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
